# key-value-erasure-code

./: .gitignore  .gitmodules  Dockerfile_delta  Dockerfile_ubuntu  LICENSE  Notes.txt  README.md  temp.txt  vimrc.txt  zipf.go
src/: Makefile  appl_config.yml  appl_config_all.yml  deploy_config_all.yml  docker-compose.yml  kill_processes.sh  process.go  process.sh  rundaemon.sh  start_processes.sh  start_processes_old.sh  start_regression.sh  start_regression_v2pnm.sh  start_servers.sh
src/analytics/: expAnalyzer.go  expAnalyzer.go.bkup  safetyAnalyzer.go  serverStats.go
src/daemons/: abd.go  applicationUtilities.go  client.go  client_application.go  communications.go  consts.go  controller.go  controllerRoutes.go  deploymentUtilities.go  getParamRoutes.go  global_variables.go  httpServer.go  list_based_algos.go  logger.go  main_daemon.go  params.go  routes.go  server.go  setParamRoutes.go  soda_variations.go  utils.go
src/gostatgrab/: gostatgrab  gostatgrab.go
src/libstatgrab-0.17/: ChangeLog  Makefile  Makefile.in  NEWS  config.h  config.h.in  config.status  configure  configure.in  libstatgrab.pc  libtool
src/libstatgrab-0.17/docs/: Makefile  Makefile.in
src/libstatgrab-0.17/docs/statgrab/: Makefile  Makefile.am  Makefile.in
src/libstatgrab-0.17/examples/: Makefile  (+22 more)
src/regtestdata/: appl_config.yml  appl_config_abd.yml  appl_config_abd_fast.yml  appl_config_sodaw.yml  appl_config_sodaw_fast.yml  deploy_config_abd.yml  reg_kill_process.sh  reg_start_process.sh
ymlFiles/: appl_config.yml  appl_config_all.yml  deploy_config.yml  deploy_config_all.yml
(+80 files in other folders)
